todo-complete: authentication